--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,26 @@ body
     font-size: 16px;
 
 }
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white; 
+    font-weight: bold;
+    font-size: 0.6cm; 
+    margin: 0;
+    padding: 0.5cm;
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 lem;
+    font-weight: normal;
+    font-size: 0.5cm;   
+}
 #container
 {
     width: 70%;
-    padding: len;
+    padding: 0;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -17,5 +33,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: lem;
 }
 
